// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Astronaut: Table for storing astronaut information
Launch: Table for storing launch information
AstronautBiography: Table for storing additional biographical details about astronauts
AstronautRank: Table for managing astronaut ranks
Mission: Table for storing mission details
LaunchIntegrator: Table for recording launch integrators and their assignments
Spacecraft: Table for storing spacecraft details
MissionCrew: Table for storing crew assigned to missions
MissionSummary: Table for storing mission summaries
MissionType: Table for categorizing mission types
SpaceSector: Table for defining sectors in space for missions
SpacecraftComponent: Table for detailing spacecraft components
'''
}

Table Astronaut {
    id INTEGER [primary key]
    name VARCHAR 
    nationality VARCHAR 
    mission_count INTEGER 
    launch_id INTEGER 
    }

Table Launch {
    id INTEGER [primary key]
    launch_date DATETIME 
    mission_id INTEGER 
    launch_site VARCHAR 
    }

Table AstronautBiography {
    id INTEGER [primary key]
    astronaut_id INTEGER 
    biography TEXT 
    date_of_birth DATE 
    }

Table AstronautRank {
    id INTEGER [primary key]
    rank_name VARCHAR 
    description VARCHAR 
    astronaut_id INTEGER 
    }

Table Mission {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    scheduled_launch_date DATETIME 
    duration_days INTEGER 
    mission_status VARCHAR 
    spacecraft_id INTEGER 
    }

Table LaunchIntegrator {
    id INTEGER [primary key]
    name VARCHAR 
    assigned_launch_id INTEGER 
    }

Table Spacecraft {
    id INTEGER [primary key]
    name VARCHAR 
    model VARCHAR 
    capacity INTEGER 
    }

Table MissionCrew {
    id INTEGER [primary key]
    mission_id INTEGER 
    astronaut_id INTEGER 
    role VARCHAR 
    }

Table MissionSummary {
    id INTEGER [primary key]
    mission_id INTEGER 
    total_astronauts INTEGER 
    total_duration INTEGER 
    }

Table MissionType {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table SpaceSector {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    mission_id INTEGER 
    }

Table SpacecraftComponent {
    id INTEGER [primary key]
    spacecraft_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    maintenance_date DATETIME 
    }



// Relationships
    Ref: Astronaut.(launch_id) < Launch.(id)
    Ref: Launch.(mission_id) < Mission.(id)
    Ref: AstronautBiography.(astronaut_id) < Astronaut.(id)
    Ref: AstronautRank.(astronaut_id) < Astronaut.(id)
    Ref: Mission.(spacecraft_id) < Spacecraft.(id)
    Ref: LaunchIntegrator.(assigned_launch_id) < Launch.(id)
    Ref: MissionCrew.(astronaut_id) < Astronaut.(id)
    Ref: MissionCrew.(mission_id) < Mission.(id)
    Ref: MissionSummary.(mission_id) < Mission.(id)
    Ref: SpaceSector.(mission_id) < Mission.(id)
    Ref: SpacecraftComponent.(spacecraft_id) < Spacecraft.(id)
